--- a/trunk/app/modules/supplier/views/scripts/index/edit.phtml
+++ b/trunk/app/modules/supplier/views/scripts/index/edit.phtml
@@ -12,6 +12,7 @@ $this->headScript()->appendFile($this->APP_STATIC_SERVER.'/js/jquery.validate/jq
 
 <form method="post" action="<?php echo $this->url(array('supplier_id' => $this->supplier->supplier_id), 'supplier_index_edit'); ?>" id="editSupplierForm" class="t_a_form">
 <div class="grid_12 t_a_bottom"><?php echo $this->translator('supplier_add_guide'); ?></div>
+
 <div class="grid_12 t_a_bottom">
 	<div class="clearfix t_a_bottom">
 		<div class="grid_2 alpha"><label><?php echo $this->translator('supplier_name'); ?>:</label></div>
@@ -41,12 +42,51 @@ $this->headScript()->appendFile($this->APP_STATIC_SERVER.'/js/jquery.validate/jq
 		<div class="grid_2 alpha"><label><?php echo $this->translator('supplier_hour_close'); ?>:</label></div>
 		<div class="grid_10 omega"><input type="text" id="hour_close" name="hour_close" value="<?php if ($this->supplier != null) : ?><?php echo $this->supplier->hour_close; ?><?php endif; ?>" style="width: 400px" maxlength="5" /></div>
 	</div>
-	
-	
+	<div class="clearfix t_a_bottom">
+		<div class="grid_2 alpha"><label><?php echo $this->translator('supplier_category'); ?>:</label></div>
+		<div class="grid_10 omega">
+			<select name="category_id" id="category_id">
+				<option value="">---</option>
+			<?php for ($i = 0; $i < count($this->categories); $i++) : ?>
+				<option value="<?php echo $this->categories[$i]->category_id; ?>"
+					<?php if ($this->supplier != null) : ?>
+					<?php if ($this->supplier->category_id == $this->categories[$i]->category_id)  : ?> selected
+					<?php endif; ?><?php endif; ?>
+					>
+					<?php echo str_repeat('---', $this->categories[$i]->depth).$this->categories[$i]->name; ?>
+					</option>
+			<?php endfor; ?>
+			</select>
+		</div>
+	</div>
+	<div class="clearfix t_a_bottom">
+		<div class="grid_2 alpha"><label><?php echo $this->translator('supplier_image'); ?>:</label></div>
+		<div class="grid_10 omega"><input type="text" name="fileImage" id="fileImage" style="width: 400px" />
+		<br />
+		<?php echo $this->uploader('multimedia', 
+			array('extension' => '*.jpg;*.jpeg;*.png;*.gif', 'multi' => false, 'auto' => true, 'simUploadLimit' =>1, 'sizeLimit' => 1024 * 1024 * 5, 'thumbnails' => 'none'), 
+			array('onComplete' => 'onUploadCompleteFileImage')); 
+		?>
+		<?php
+			if(!empty($this->supplier->image_general)){
+				echo '
+				<img border="0" src="'.$this->supplier->image_general.'" width="100">
+				<br>
+				<input type="checkbox" name="delImage" id="delImage" value="delete"/> 
+				';
+				echo $this->translator('supplier_delete_image');
+			}
+		?>
+	</div>
+	</div>
 	<div class="grid_10 prefix_2 alpha"><input type="submit" class="t_a_button" value="<?php echo $this->translator('supplier_add_save_button'); ?>" /></div>
 </div>
 </form>
 <script type="text/javascript">
+function onUploadCompleteFileImage(event, ID, fileObj, response, data) {
+	var res = $.evalJSON(response);
+	$('#fileImage').attr('value', res.original);
+};
 $(document).ready(function() {
 	$.validator.addMethod('slug', function(value) {
 		var regex = new RegExp(/^[a-z0-9\-]+$/);
